cpp/test/Slice/errorDetection/RedefinitionAsModule.err
RedefinitionAsModule.ice:12 error: redefinition of `Vector' as module
