cpp/test/Slice/errorDetection/RedefinitionAsModule.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

vector<int> Vector;
module Vector { };
module Module { };
module Module { };
